--- a/newfile.html
+++ b/newfile.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>my Name</h1>
         <p>Web Developer | Designer</p>
         <nav>
             <ul>
