--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Your Name - Portfolio</title>
+    <title>Priyanka- Portfolio</title>
     <style>
         /* Reset some default styles */
 body, h1, h2, h3, p {
