--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ footer {
 </head>
 <body>
     <header>
-        <h1>my Name</h1>
+        <h1>Hima Bindu</h1>
         <p>Web Developer | Designer</p>
         <nav>
             <ul>
